Improved features and added missing demos